fixed insights hero spacing on header and sub-header

--- a/css/theme/style.css
+++ b/css/theme/style.css
@@ -2202,7 +2202,7 @@ h2, h3, h4 {
   line-height: 25px;
   color: #E5E5E5;
   max-width: 460px;
-  margin-top: 9px;
+  margin-top: 17px;
   margin-bottom: 0px; }
   @media screen and (min-width: 500px) {
     .insights-description {
@@ -3015,7 +3015,7 @@ position: relative; */
 
 \* -------------------------------- */
 #insights-hero {
-  padding: 35px 0 50px;
+  padding: 35px 0 22px;
   background: #373634 url("../../images/insights-page/insights_hero-1200-1x.jpg");
   background-size: cover;
   background-position: 35% 0%;
