--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -270,7 +270,7 @@ h2, h3, h4 {
   line-height: 25px;
   color: #E5E5E5;
   max-width: 460px;
-  margin-top: 9px;
+  margin-top: 17px;
   margin-bottom: 0px;
   
   @include at-query (500px) {
